--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,6 +1,6 @@
 %p= link_to '[Write New Article]', new_article_path
 
-%h1= link_to 'imalog', articles_path
+%h1= link_to @blog.name, articles_path
 
 - @articles.each do |article|
   %h2= link_to article.title, article
