allow logging in (but no logout, no action limitation).

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,7 +1,7 @@
-%p= link_to '[Write New Article]', new_article_path
+%p= link_to '[New Article]', new_article_path
 
 %h1= link_to @blog.name, articles_path
 
 - @articles.each do |article|
   %h2= link_to article.title, article
-  %p= article.body
+  != article.compile
