--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,3 +1,6 @@
-%h1= link_to @blog.name, articles_path
+= render partial: 'articlemenu', locals: {mode: 'new'}
+= render partial: 'appmenu'
+
+%h1= link_to @blog.name, blog_path
 
 = render 'form'
