--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,5 +1,6 @@
-= render partial: 'articlemenu', locals: {mode: 'edit', article: @article}
-= render partial: 'appmenu'
+#menu
+  = render partial: 'articlemenu', locals: {mode: 'edit', article: @article}
+  = render partial: 'appmenu'
 
 %h1= link_to @blog.name, blog_path
 
