--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
-    %p#notice= notice
-    %p#alert= alert
-    = yield
+    #pagecontainer
+      %p#notice= notice
+      %p#alert= alert
+      = yield
