--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,3 +123,49 @@ p {
 ul {
     margin: 0px;
 }
+
+table {
+    border-collapse: collapse;
+    border: 2px solid black;
+}
+
+th {
+    color: white;
+    background-color: gray;
+    text-align: left;
+    font-weight: bold;
+    border: 1px solid black;
+    padding: 3px;
+}
+
+td {
+    text-align: left;
+    border: 1px solid gray;
+    padding: 3px 0.4em;
+}
+
+form {
+    margin-top: 2em;
+}
+
+form label {
+    vertical-align: middle;
+}
+
+#article_title {
+    width: 100%;
+    height: 1.5em;
+}
+
+#article_body {
+    width: 100%;
+    height: 80%;
+    line-height: 1.5;
+}
+
+div.actions input {
+    width: 100px;
+    height: 40px;
+    font-size: 300%;
+    float: right;
+}
