--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -6,12 +6,10 @@
         - @article.errors.full_messages.each do |msg|
           %li= msg
   .field
-    = f.label :title
+    = f.label :title, "タイトル"
     %br/
-    = f.text_area :title
+    = f.text_area :title, size: "50x1"
   .field
-    = f.label :body
-    %br/
-    = f.text_area :body
+    = f.text_area :body, size: "60x25"
   .actions
-    = f.submit
+    = f.submit '投稿'
