--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,3 +10,8 @@
       %p#notice= notice
       %p#alert= alert
       = yield
+      #footer
+        %p#application_notice
+          powered by
+          %a(href="https://github.com/aamine/imalog")
+            imalog
